# ps-patch-system

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  tar.py
.github/: README.md
.github/workflows/: payload.yml
cmake/: c-standard.cmake  embed.cmake  embed_file.cmake  optimization-settings.cmake  setup-tools.cmake
env/: orbis.sh
host/: .gitignore  bin2c.c  lzma.c  shellcode_build.sh  shellcode_gen.cpp
host/shellcode/: shellcore.cpp  shellcore_attribute.cpp  shellcore_onNewProcess.cpp  user_load_prx.cpp  user_videoout_120hz.cpp
patch/: CMakeLists.txt  hide_app_sql.c  main.cpp  patch_shellcore.c  shellcore_onNewProcess.h
patch-bapm/: dmem.c
patch-bundle/: CMakeLists.txt  main.cpp  utils.hpp
patch-bundle-loader/: CMakeLists.txt  main.cpp
patch-dmem/: CMakeLists.txt  dmem.c
patch-server/: CMakeLists.txt  main.cpp  patch_reg.cpp  patch_reg.hpp  patch_signal.cpp  patch_user_xml.cpp  patch_user_xml.hpp  patch_web_xml.cpp  patch_web_xml.hpp  server_120hz_patch.cpp  server_120hz_patch.hpp  server_patch.cpp  server_signal.cpp  server_thread.cpp  shellcore_attribute.h  usermode_prx_load.h  videoout_120hz.h
patch-web/: CMakeLists.txt  install.c  main.cpp
shared/: CMakeLists.txt  app_info.h  app_metadata.c  app_metadata.h  debug.h  dynlib.c  dynlib.h  file.c  file.h  macro.h  match.c  match.h  memory.c  memory.cpp  memory.h  memory.hpp  my_assert.cpp  my_assert.h  notify.c  notify.h  patch-common.c  patch-common.h  patch_frame_context.h  path.h  platform_kernel.h  platform_mdbg.h  proc.c  proc.h  proc_rw.c  proc_rw.h  server_data.h  shellcode_symbol.c  shellcode_symbol.h  sigqueue.c  sigqueue.h  static_assert_checks.c  static_assert_checks.cpp  stringid.h  stringid.hpp  sys_state.c  (+1 more)
